--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     </header>
     <div class="hero"></div>
     <div class="content">
-        <div class="search-engine-optimization">
+        <!-- Added ID for search engine optimization yo! -->
+        <div id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -44,22 +45,23 @@
         </div>
     </div>
     <aside class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefit-section">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefit-section">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefit-section">
             <h3>Cost Management</h3>
+            <!-- Changed to have a self closing tag -->
             <img src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
