--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+       <!-- Took out div and added nav -->
         <nav>
             <ul>
                 <li><a href="#search-engine-optimization">Search Engine Optimization</a></li>
@@ -19,31 +20,34 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
-        <!-- Added ID for search engine optimization yo! -->
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <figure class="hero"></figure>
+    <section class="content">
+        <!-- Added ID for search engine optimization -->
+        <!-- Added alt= to each img for accessiblilty -->
+        <!-- Changed div to section and added summary in the div. -->
+        <summary id="search-engine-optimization" class="search-engine-optimization">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="Search Engine Optimization" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </summary>
+        <summary id="online-reputation-management" class="online-reputation-management">
+            <img src="./assets/images/online-reputation-management.jpg" alt="online reputation management" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </summary>
+        <summary id="social-media-marketing" class="social-media-marketing">
+            <img src="./assets/images/social-media-marketing.jpg" alt="social media marketing" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </summary>
+    </section>
+    <!-- Changed div to aside. -->
     <aside class="benefits">
         <aside class="benefit-section">
             <h3>Lead Generation</h3>
@@ -68,6 +72,7 @@
             </p>
         </aside>
     </aside>
+    <!-- Changed div to footer. -->
     <footer class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
